fix spacing

--- a/style.css
+++ b/style.css
@@ -54,7 +54,8 @@ body {
     color: white;
     text-align: center;
     position: relative;
-    top: 28%;
+    bottom: 25%;
+    top: 25%;
     background-color: rgba(209, 209, 209, 0.75);
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
